bundled_metadata/force-app/main/default/objects/StoreProduct/StoreProduct.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>