bundled_metadata/force-app/main/default/objects/StoreProduct/fields/Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_External_Id__c</fullName>
    <label>Account External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>