bundled_metadata/force-app/main/default/objects/StoreProduct/fields/Catalog_Price__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Price__c</fullName>
    <description>Price of the product for this customer based on cluster pricing</description>
    <label>Catalog Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>