bundled_metadata/force-app/main/default/objects/StoreProduct/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>&apos;Category</description>
    <label>Category</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Store Products</relationshipLabel>
    <relationshipName>Store_Products</relationshipName>
    <type>Lookup</type>
</CustomField>