bundled_metadata/force-app/main/default/objects/StoreProduct/fields/EUSFA_Store_Product_External_Id__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Store_Product_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Store Product External Id</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>