bundled_metadata/force-app/main/default/objects/StoreProduct/fields/IsMissingMSL__c.field-meta.xml
<CustomField>
    <fullName>IsMissingMSL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Missing MSL</label>
    <type>Checkbox</type>
</CustomField>