bundled_metadata/force-app/main/default/objects/StoreProduct/fields/IsMSL__c.field-meta.xml
<CustomField>
    <fullName>IsMSL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MSL</label>
    <type>Checkbox</type>
</CustomField>