bundled_metadata/force-app/main/default/objects/StoreProduct/fields/Prod_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Prod_External_Id__c</fullName>
    <label>Product External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>