bundled_metadata/force-app/main/default/objects/StoreProduct/fields/Wholesaler_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Product_Id__c</fullName>
    <description>Id of the related product as stored in the Wholesaler&apos;s ERP system</description>
    <externalId>true</externalId>
    <label>Wholesaler Product Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>